--- a/client-oauth/src/components/Info.css
+++ b/client-oauth/src/components/Info.css
@@ -85,6 +85,7 @@
   .info-container{
     width: 90%;
     min-width:400px;
+    font-size: 12px;
   }
 }
 
@@ -92,5 +93,6 @@
   .info-container{
     width: 100%;
     min-width:500px;
+    font-size: 12px;
   }
 }
