--- a/client-oauth/src/index.css
+++ b/client-oauth/src/index.css
@@ -5,6 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  /* background: linear-gradient(180deg, rgba(65,55,183,1) 0%, rgba(82,85,183) 35%, rgba(92,60,191,1) 100%); */
 
 }
 
