--- a/client-oauth/src/style/App.css
+++ b/client-oauth/src/style/App.css
@@ -154,8 +154,6 @@ p{
 
 }
 
-
-
 .getWeatherBtn:hover{
   background: royalblue;
   color: #fff;
@@ -166,21 +164,12 @@ p{
   background: crimson;
   transform:scale(1.1)
 }
-
-.goOn{
-  display: inline-block;
-  position: absolute;
-  width: 100px;
-  height: 50px;
-  bottom :12%;
-  right: 5%;
-  border: none;
-  border-radius: 20px;
-  background-color: #fff;
-  color:black;
-  font-size: 1.5rem;
-  font-weight: bolder;
+.stopAnimationBtn:hover{
+  color: #fff;
+  background: crimson;
+  transform:scale(1.1)
 }
+
 
 .fa-snowflake{
   animation : fall 5s linear forwards;
