--- a/client-oauth/src/style/Header.css
+++ b/client-oauth/src/style/Header.css
@@ -1,18 +1,19 @@
 .headerContainer{
   display: flex;
   justify-content:space-between;
-  /* border: 1px solid white; */
-  /* background: linear-gradient(10deg, rgba(65,55,183,1) 0%, rgba(82,85,183) 35%, rgba(92,60,191,1) 100%); */
+  width: 80%;
+  margin: 0 auto;
+  /* border: 1px solid chartreuse; */
 }
 
 .header-title-container{
-  width: 10%;
   min-width : 120px;
   max-height: 40px;
   color: #fff;
   padding : 12px;
-  font-size: small;
-  /* border: 1px solid white; */
+  font-size: 1.2rem;
+  margin-left : 10px;
+  /* border: 1px solid #fff; */
 }
 
 .logo-name-header{
@@ -20,15 +21,21 @@
 }
 
 .user-box{
-  width: 20%;
-  max-width: 80px; 
+  width: 25%;
+  max-width: 90px; 
   color: #fff;
-  font-size: 1.1rem;
+  font-size: 1.4rem;
   display: flex;
   padding: 5px 0;
+  margin-right: 10px;
   /* border: 1px solid #fff; */
 }
 .user-box i{
   margin: 5px 10px;
   cursor: pointer;
 }
+
+.user-box i:hover{
+  color: coral;
+}
+
