--- a/client-oauth/src/style/Info.css
+++ b/client-oauth/src/style/Info.css
@@ -1,10 +1,12 @@
 
 .info-container{
   width: 60%;
-  min-width: 345x;
+  min-width: 400px;
+  max-width: 520px;
   height: 50px;
 
   margin: 25px auto;
+  margin-top: 55px;
   display: flex;
   justify-content: space-around;
   border-radius: 15px;
@@ -14,11 +16,11 @@
 }
 
 .info-innerbox{
-  width: 20%;
+  width: 30%;
   min-width : 85px;
   height: 100%;
   margin-top: 2px;
-  /* border: 1px solid coral; */
+  border: 1px solid coral;
   text-align: center;
   display: flex;
   color: #252525;
