--- a/client-oauth/src/style/App.css
+++ b/client-oauth/src/style/App.css
@@ -12,8 +12,12 @@
   height: 100vh;
   background: linear-gradient(180deg, rgba(65,55,183,1) 0%, rgba(82,85,183) 35%, rgba(92,60,191,1) 100%);
 }
-.darkMode{
-  background-color: #252525;
+.App-darkMode{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(315deg, #000000 0%, #414141 74%);
   color: #fff;
 }
 
